--- a/front-end-for-blog1/admin.html
+++ b/front-end-for-blog1/admin.html
@@ -27,7 +27,7 @@
 </head>
 <body>
   <h1 style="border-bottom: 1px solid #ccc; padding-bottom: 10px;">Manage</h1>
-  <p>
+  <p> 
     <a href="/new.html">create new blog</a>
   </p>
   <div style="margin-bottom: 10px;">
@@ -72,7 +72,7 @@
     //get dom element
     const $textKeyword = $('#text-keyword')
     const $btnSearch = $('#btn-search')
-    const $tablerContainer = $('#table-container')
+    const $tableContainer = $('#table-container')
 
     //add url
     let url = '/api/blog/list?isadmin=1'
@@ -91,7 +91,7 @@
       //display data
       const data = res.data || []
       data.forEach(item => {
-        $tablerContainer.append($(`
+        $tableContainer.append($(`
           <tr>
             <td>
               <a href="/detail.html?id=${item.id}" target="_blank">${item.title}</a>
@@ -105,6 +105,28 @@
           </tr>
         `))
       })
+    })
+
+    $btnSearch.click(() => {
+      const keyword = $textKeyword.val()
+      location.href='/admin.html?keyword=' + keyword
+    })
+
+    $tableContainer.click(e => {
+      const $target = $(e.target)
+      if ($target.hasClass('item-del') === false) {
+        return
+      }
+      if (confirm('Are you sure you want to delete?')) {
+        const url = '/api/blog/del?id=' + $target.attr('data-id')
+        post(url).then(res => {
+          if (res.errno !== 0) {
+            alert('delete error')
+            return
+          }
+          location.href = location.href
+        })
+      }
     })
   </script>
   
